--- a/public/024-contact-information.html
+++ b/public/024-contact-information.html
@@ -727,8 +727,7 @@
 							<div class="sContactInfo__bg bg-wrap"><picture class="picture-bg"> 
 <source type="image/webp" srcset="img/@2x/webp/sContactInfo-bg.webp" media="(min-width:576px)">
 <source type="image/webp" srcset="img/@1x/webp/sContactInfo-bg.webp">
-<source type="image/jpg" srcset="img/@2x/avif/sContactInfo-bg.jpg" media="(min-width:576px)">
-<source type="image/jpg" srcset="img/@1x/avif/sContactInfo-bg.jpg"><img src="img/@2x/sContactInfo-bg.jpg" alt="">
+<img src="img/@2x/sContactInfo-bg.jpg" alt="">
 </picture>
 							</div>
 						</div>
