--- a/public/016-order-1.html
+++ b/public/016-order-1.html
@@ -917,6 +917,47 @@
 														</div>
 													</div>
 												</div>
+												<div class="oformlenie-accordeon-block js_sale_order_tabs_tab js_sale_order_tabs_tab__step3">
+													<h2 class="oformlenie-accordeon-title active" onclick="CShopSaleOrder.goToTab(3); return false;">3. Способ оплаты  - второй вариант</h2>
+													<div class="oformlenie-accordeon-content active">
+														<div class="pay-variant-val2">
+															<div class="pay-group">
+																<div class="pay-group__head">
+																	<svg class="icon icon-pay-1 ">
+																		<use xlink:href="img/svg/sprite.svg#pay-1"></use>
+																	</svg>Оплата картой онлайн
+																</div>
+																<div class="pay-group__body">
+																	<label class="pay-radio">
+																		<input type="radio" name="pay-var-2"><span class="pay-radio__img-wrap"><img src="img/bank-icon2.png" alt=""></span><span class="pay-radio__title">Покупай со Сбером (Кредит)</span>
+																	</label>
+																	<label class="pay-radio">
+																		<input type="radio" name="pay-var-2"><span class="pay-radio__img-wrap"><img src="img/bank-icon2.png" alt=""></span><span class="pay-radio__title">Покупай со Сбером (Кредит)</span>
+																	</label>
+																</div>
+															</div>
+															<div class="pay-group active">
+																<div class="pay-group__head">
+																	<svg class="icon icon-pay-2 ">
+																		<use xlink:href="img/svg/sprite.svg#pay-2"></use>
+																	</svg>Расрочка/Кредит
+																</div>
+																<div class="pay-group__body">
+																	<label class="pay-radio">
+																		<input type="radio" name="pay-var-2"><span class="pay-radio__img-wrap"><img src="img/bank-icon2.png" alt=""></span><span class="pay-radio__title">Покупай со Сбером (Кредит)</span>
+																	</label>
+																	<label class="pay-radio">
+																		<input type="radio" name="pay-var-2"><span class="pay-radio__img-wrap"><img src="img/bank-icon2.png" alt=""></span><span class="pay-radio__title">Покупай со Сбером (Кредит)</span>
+																	</label>
+																</div>
+															</div>
+														</div>
+														<div class="d-flex oformlenie-end align-items-center">
+															<button class="oformlenie-btn js-submit-order" type="submit">оформить заказ</button>
+															<p class="oformlenie-politika">Нажимая кнопку "Оформить заказ" я соглашаюсь с <a href="/about/polozhenie-o-personalnykh-dannykh/" target="_blank">Положением о персональных данных</a> и <a href="/about/politika-konfidentsialnosti/" target="_blank">конфиденциальности</a>.</p>
+														</div>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
