--- a/public/05-prod-card.html
+++ b/public/05-prod-card.html
@@ -1224,7 +1224,111 @@
 											<div class="pc-tabs__dd-img"><img class="img-svg-js" loading="lazy" src="img/svg/footMobNavItem-2.svg" alt=""/>
 											</div><span>Отзывы</span>
 										</div>
-										<div class="pc-tabs__dd-content dd-content-js">2
+										<div class="pc-tabs__dd-content dd-content-js">
+											<div class="reviews">
+												<h3>Отзывы о Стиральная машина Miele WWV 980 WPS WhiteEdition </h3>
+												<div class="reviews__stars">
+													<svg class="icon icon-star  active">
+														<use xlink:href="img/svg/sprite.svg#star"></use>
+													</svg>
+													<svg class="icon icon-star  active">
+														<use xlink:href="img/svg/sprite.svg#star"></use>
+													</svg>
+													<svg class="icon icon-star  active">
+														<use xlink:href="img/svg/sprite.svg#star"></use>
+													</svg>
+													<svg class="icon icon-star  active">
+														<use xlink:href="img/svg/sprite.svg#star"></use>
+													</svg>
+													<svg class="icon icon-star ">
+														<use xlink:href="img/svg/sprite.svg#star"></use>
+													</svg>
+													<div class="reviews__how-much">9 отзывов
+													</div>
+												</div><a class="reviews__btn btn" href="#">оставить отзыв</a>
+												<div class="reviews__item">
+													<div class="reviews__row row">
+														<div class="reviews__col col-lg-auto">
+															<div class="reviews__head">
+																<h4>Максим</h4>
+																<p>27. 12. 2020</p>
+															</div>
+															<div class="reviews__rate">
+																<p>Оценка</p>
+																<div class="reviews__stars">
+																	<svg class="icon icon-star  active">
+																		<use xlink:href="img/svg/sprite.svg#star"></use>
+																	</svg>
+																	<svg class="icon icon-star  active">
+																		<use xlink:href="img/svg/sprite.svg#star"></use>
+																	</svg>
+																	<svg class="icon icon-star  active">
+																		<use xlink:href="img/svg/sprite.svg#star"></use>
+																	</svg>
+																	<svg class="icon icon-star  active">
+																		<use xlink:href="img/svg/sprite.svg#star"></use>
+																	</svg>
+																	<svg class="icon icon-star ">
+																		<use xlink:href="img/svg/sprite.svg#star"></use>
+																	</svg>
+																</div>
+															</div>
+															<div class="reviews__features">
+																<div class="reviews__text">
+																	<p>Шум</p>
+																	<p>4</p>
+																</div>
+																<div class="reviews__line" style="--rate: 4">
+																</div>
+															</div>
+															<div class="reviews__features">
+																<div class="reviews__text">
+																	<p>Качество стирки</p>
+																	<p>3</p>
+																</div>
+																<div class="reviews__line" style="--rate: 3">
+																</div>
+															</div>
+															<div class="reviews__features">
+																<div class="reviews__text">
+																	<p>Внешний вид</p>
+																	<p>5</p>
+																</div>
+																<div class="reviews__line" style="--rate: 5">
+																</div>
+															</div>
+														</div>
+														<div class="col-lg">
+															<div class="reviews__text-wrap">
+																<div class="reviews__text-item">
+																	<h5>Достоинства</h5>
+																	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+																</div>
+																<div class="reviews__text-item">
+																	<h5>Недостатки</h5>
+																	<p>Vitae eget rhoncus eget nec semper feugiat sagittis aliquam. Habitant mattis aliquet id elementum eu sit nulla scelerisque quis. </p>
+																</div>
+																<div class="reviews__text-item">
+																	<h5>Общее впечатление</h5>
+																	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae eget rhoncus eget nec semper feugiat sagittis aliquam. Habitant mattis aliquet id elementum eu sit nulla scelerisque quis. </p>
+																</div>
+															</div>
+															<div class="reviews__grade">
+																<button class="reviews__button">
+																	<svg class="icon icon-like ">
+																		<use xlink:href="img/svg/sprite.svg#like"></use>
+																	</svg>20
+																</button>
+																<button class="reviews__button">
+																	<svg class="icon icon-disLike ">
+																		<use xlink:href="img/svg/sprite.svg#disLike"></use>
+																	</svg>1
+																</button>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
