--- a/public/04-delivery-1.html
+++ b/public/04-delivery-1.html
@@ -725,16 +725,16 @@
 					<div class="tabs">
 						<div class="sDelivery__caption-row tabs__caption row">
 							<div class="col-auto">
-								<div class="sDelivery__tabs-btn tabs__btn active">Способы доставки
+								<div class="sDelivery__tabs-btn tabs__btn">Способы доставки
 								</div>
 							</div>
 							<div class="col-auto">
-								<div class="sDelivery__tabs-btn tabs__btn">Способы оплаты
+								<div class="sDelivery__tabs-btn tabs__btn active">Способы оплаты
 								</div>
 							</div>
 						</div>
 						<div class="tabs__wrap">
-							<div class="tabs__content active">
+							<div class="tabs__content">
 								<div class="delivery">
 									<div class="delivery__top-txt">
 										Вы можете приобрести все товары из нашего ассортимента с доставкой во все города России. По Москве и Московской области мы доставляем Ваши заказы ежедневно в удобное для Вас время. Также у нас можно забрать заказы самостояельно. Более подробно ознакомится с условиями можно в разделе
@@ -851,7 +851,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="tabs__content">
+							<div class="tabs__content active">
 								<div class="payment">
 									<div class="payment__row row">
 										<div class="col-md">
@@ -860,33 +860,7 @@
 													<div class="payment__head dd-head-js">
 														<div class="payment__h-row row align-items-center">
 															<div class="col-auto">
-																<div class="payment__h-icon"><img class="img-svg-js" loading="lazy" src="img/svg/payment-item-1.svg" alt=""/>
-																</div>
-															</div>
-															<div class="col">
-																<div class="payment__title">Оплата картой
-																</div>
-															</div>
-															<div class="col-auto">
-																<div class="payment__chevron">
-																	<svg class="icon icon-chevron-down ">
-																		<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-																	</svg>
-																</div>
-															</div>
-														</div>
-													</div>
-													<div class="payment__content dd-content-js active">
-														<p>Банковская карта VISA, MasterCard, МИР. Возможно оплатить заказ онлайн, при получении заказа при доставке или в шоу-руме.</p>
-														<p>Для оплаты (ввода реквизитов Вашей карты) Вы будете перенаправлены на платежный шлюз ПАО СБЕРБАНК. Соединение с платежным шлюзом и передача информации осуществляется в защищенном режиме с использованием протокола шифрования SSL. В случае если Ваш банк поддерживает технологию безопасного проведения интернет-платежей Verified By Visa или MasterCard SecureCode для проведения платежа также может потребоваться ввод специального пароля.</p>
-														<p>Настоящий сайт поддерживает 256-битное шифрование. Конфиденциальность сообщаемой персональной информации обеспечивается ПАО СБЕРБАНК. Введенная информация не будет предоставлена третьим лицам за исключением случаев, предусмотренных законодательством РФ. Проведение платежей по банковским картам осуществляется в строгом соответствии с требованиями платежных систем МИР, Visa Int. и MasterCard Europe Sprl. Возврат переведенных средств, производится на Ваш банковский счет в течение 5—30 рабочих дней (срок зависит от Банка, который выдал Вашу банковскую карту).</p>
-													</div>
-												</div>
-												<div class="payment__dd-item">
-													<div class="payment__head dd-head-js">
-														<div class="payment__h-row row align-items-center">
-															<div class="col-auto">
-																<div class="payment__h-icon"><img class="img-svg-js" loading="lazy" src="img/svg/payment-item-2.svg" alt=""/>
+																<div class="payment__h-icon"><img class="img-svg-js" src="img/svg/payment-item-2.svg" alt=""/>
 																</div>
 															</div>
 															<div class="col">
@@ -902,21 +876,24 @@
 															</div>
 														</div>
 													</div>
-													<div class="payment__content dd-content-js">
-														<p>Банковская карта VISA, MasterCard, МИР. Возможно оплатить заказ онлайн, при получении заказа при доставке или в шоу-руме.</p>
-														<p>Для оплаты (ввода реквизитов Вашей карты) Вы будете перенаправлены на платежный шлюз ПАО СБЕРБАНК. Соединение с платежным шлюзом и передача информации осуществляется в защищенном режиме с использованием протокола шифрования SSL. В случае если Ваш банк поддерживает технологию безопасного проведения интернет-платежей Verified By Visa или MasterCard SecureCode для проведения платежа также может потребоваться ввод специального пароля.</p>
-														<p>Настоящий сайт поддерживает 256-битное шифрование. Конфиденциальность сообщаемой персональной информации обеспечивается ПАО СБЕРБАНК. Введенная информация не будет предоставлена третьим лицам за исключением случаев, предусмотренных законодательством РФ. Проведение платежей по банковским картам осуществляется в строгом соответствии с требованиями платежных систем МИР, Visa Int. и MasterCard Europe Sprl. Возврат переведенных средств, производится на Ваш банковский счет в течение 5—30 рабочих дней (срок зависит от Банка, который выдал Вашу банковскую карту).</p>
+													<div class="payment__content dd-content-js active">
+														<div class="pay-variant-content">
+															<ul>
+																<li> <strong>Наличными</strong><br/>оплата производится при получении заказа в месте доставки или в шоуруме <strong>KitchenMania</strong></li>
+																<li> <strong>Картой курьеру</strong><br/>оплата производится пластиковой картой при получении заказа в месте доставки или в шоуруме <strong>KitchenMania</strong></li>
+															</ul>
+														</div>
 													</div>
 												</div>
-												<div class="payment__dd-item">
+												<div class="payment__dd-item active">
 													<div class="payment__head dd-head-js">
 														<div class="payment__h-row row align-items-center">
 															<div class="col-auto">
-																<div class="payment__h-icon"><img class="img-svg-js" loading="lazy" src="img/svg/payment-item-3.svg" alt=""/>
+																<div class="payment__h-icon"><img class="img-svg-js" src="img/svg/payment-item-1.svg" alt=""/>
 																</div>
 															</div>
 															<div class="col">
-																<div class="payment__title">Безналичный расчет
+																<div class="payment__title">Оплаты онлайн
 																</div>
 															</div>
 															<div class="col-auto">
@@ -928,55 +905,110 @@
 															</div>
 														</div>
 													</div>
-													<div class="payment__content dd-content-js">
-														<p>Банковская карта VISA, MasterCard, МИР. Возможно оплатить заказ онлайн, при получении заказа при доставке или в шоу-руме.</p>
-														<p>Для оплаты (ввода реквизитов Вашей карты) Вы будете перенаправлены на платежный шлюз ПАО СБЕРБАНК. Соединение с платежным шлюзом и передача информации осуществляется в защищенном режиме с использованием протокола шифрования SSL. В случае если Ваш банк поддерживает технологию безопасного проведения интернет-платежей Verified By Visa или MasterCard SecureCode для проведения платежа также может потребоваться ввод специального пароля.</p>
-														<p>Настоящий сайт поддерживает 256-битное шифрование. Конфиденциальность сообщаемой персональной информации обеспечивается ПАО СБЕРБАНК. Введенная информация не будет предоставлена третьим лицам за исключением случаев, предусмотренных законодательством РФ. Проведение платежей по банковским картам осуществляется в строгом соответствии с требованиями платежных систем МИР, Visa Int. и MasterCard Europe Sprl. Возврат переведенных средств, производится на Ваш банковский счет в течение 5—30 рабочих дней (срок зависит от Банка, который выдал Вашу банковскую карту).</p>
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="slider-col col-md-auto">
-											<div class="swiper-container payment-slider-js">
-												<div class="swiper-wrapper">
-													<div class="swiper-slide">
-														<div class="slider-col__item">
-															<div class="slider-col__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
-															</div>
-															<div class="slider-col__s-content">
-																<div class="slider-col__s-title">Покупай в кредит!
+													<div class="payment__content dd-content-js active">
+														<div class="pay-variant-content">
+															<ul>
+																<li> <strong>Картой онлайн</strong></li>
+																<li> <strong> <img src="img/spb.png" alt=""/>СПБ</strong></li>
+															</ul>
+															<div class="alert-block row">
+																<div class="col-auto">
+																	<div class="alert-block__circle"><img src="img/svg/icon-attention.svg" alt=""/>
+																	</div>
 																</div>
-																<div class="slider-col__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
-																</div><a class="slider-col__s-btn" href="#">узнать подробнее</a>
-															</div>
-														</div>
-													</div>
-													<div class="swiper-slide">
-														<div class="slider-col__item">
-															<div class="slider-col__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
-															</div>
-															<div class="slider-col__s-content">
-																<div class="slider-col__s-title">Покупай в кредит!
+																<div class="col">
+																	<div class="alert-block__text">Ссылка на оплату высылается только после согласования деталей заказа и подтверждения наличия товаров
+																	</div>
 																</div>
-																<div class="slider-col__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
-																</div><a class="slider-col__s-btn" href="#">узнать подробнее</a>
-															</div>
-														</div>
-													</div>
-													<div class="swiper-slide">
-														<div class="slider-col__item">
-															<div class="slider-col__bg"><img loading="lazy" src="img/@2x/payment-slider-1.jpg" alt=""/>
-															</div>
-															<div class="slider-col__s-content">
-																<div class="slider-col__s-title">Покупай в кредит!
-																</div>
-																<div class="slider-col__s-descr">В нашем магазине можно приобрести товары в рассрочку или кредит без первоначального взноса и переплат через Почта Банк.
-																</div><a class="slider-col__s-btn" href="#">узнать подробнее</a>
 															</div>
 														</div>
 													</div>
 												</div>
-												<div class="swiper-pagination"></div>
+												<div class="payment__dd-item active">
+													<div class="payment__head dd-head-js">
+														<div class="payment__h-row row align-items-center">
+															<div class="col-auto">
+																<div class="payment__h-icon"><img class="img-svg-js" src="img/svg/payment-item-4.svg" alt=""/>
+																</div>
+															</div>
+															<div class="col">
+																<div class="payment__title">Предоплата
+																</div>
+															</div>
+															<div class="col-auto">
+																<div class="payment__chevron">
+																	<svg class="icon icon-chevron-down ">
+																		<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+																	</svg>
+																</div>
+															</div>
+														</div>
+													</div>
+													<div class="payment__content dd-content-js active">
+														<div class="pay-variant-content">
+															<ul>
+																<li>Картой онлайн</li>
+																<li>Картой или наличными в нашем шоуруме  <strong>KitchenMania</strong></li>
+															</ul>
+														</div>
+													</div>
+												</div>
+												<div class="payment__dd-item active">
+													<div class="payment__head dd-head-js">
+														<div class="payment__h-row row align-items-center">
+															<div class="col-auto">
+																<div class="payment__h-icon"><img class="img-svg-js" src="img/svg/payment-item-5.svg" alt=""/>
+																</div>
+															</div>
+															<div class="col">
+																<div class="payment__title">Оплата частями
+																</div>
+															</div>
+															<div class="col-auto">
+																<div class="payment__chevron">
+																	<svg class="icon icon-chevron-down ">
+																		<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+																	</svg>
+																</div>
+															</div>
+														</div>
+													</div>
+													<div class="payment__content dd-content-js active">
+														<div class="pay-variant-content">
+															<ul>
+																<li> <img src="img/svg/sber.png" alt=""/>Плати частями от Сбер</li>
+																<li> <img src="img/svg/tin.png" alt=""/>Оплата долями Тинькофф</li><a href="#">Подробнее об услуге </a>
+															</ul>
+														</div>
+													</div>
+												</div>
+												<div class="payment__dd-item active">
+													<div class="payment__head dd-head-js">
+														<div class="payment__h-row row align-items-center">
+															<div class="col-auto">
+																<div class="payment__h-icon"><img class="img-svg-js" src="img/svg/payment-item-6.svg" alt=""/>
+																</div>
+															</div>
+															<div class="col">
+																<div class="payment__title">Оплата по счету в банке
+																</div>
+															</div>
+															<div class="col-auto">
+																<div class="payment__chevron">
+																	<svg class="icon icon-chevron-down ">
+																		<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+																	</svg>
+																</div>
+															</div>
+														</div>
+													</div>
+													<div class="payment__content dd-content-js active">
+														<div class="pay-variant-content">
+															<p>Счет на оплату выставляется после согласования деталей заказа с менеджером.</p>
+															<p>Оплата доступна как для физических лиц, так и для юридических лиц.</p>
+														</div>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
