--- a/public/04-delivery-1-1.html
+++ b/public/04-delivery-1-1.html
@@ -725,7 +725,7 @@
 					<div class="tabs">
 						<div class="sDelivery__caption-row tabs__caption row">
 							<div class="col-auto">
-								<div class="sDelivery__tabs-btn tabs__btn active"><img class="img-svg-js" src="img/svg/icon-sber.svg" alt=""/>Способы доставки
+								<div class="sDelivery__tabs-btn tabs__btn active"><img class="img-svg-js" src="img/svg/icon-sber.svg" alt=""/>Плати со Сбером
 								</div>
 							</div>
 							<div class="col-auto">
